--- a/index.html
+++ b/index.html
@@ -62,4 +62,5 @@
 
     <footer>
         <a href="deportivos.html">INICIO</a>
-        <p>&copy
+        <p> Contacto : 0981645592</p>
+        <p> Correo de contacto: angelzurita1250@gmail.com</p>
