--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <h1 class="links">INICIO</h1>
     <div>
-        <a href="#">Ford.OF</a> 
-        <a href="#">Ferrari.OF</a>
-        <a href="#">MCLAREN.OF</a>
-        <a href="#">PORCHE.OF</a>
-        <a href="#">KOINISENG.OF</a>
-        <a href="#">CORVETTE.OF</a>
+        <a href="https://www.ford.com/cars/mustang/">Ford.OF</a> 
+        <a href="https://www.ferrari.com/en-US">Ferrari.OF</a>
+        <a href="https://cars.mclaren.com/us-en">MCLAREN.OF</a>
+        <a href="https://www.porsche.com/usa/">PORCHE.OF</a>
+        <a href="https://www.koenigsegg.com/">KOINISENG.OF</a>
+        <a href="https://es.chevrolet.com/performance/corvette">CORVETTE.OF</a>
     </div>
 
     <main>   
