--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
     </main>
 
     <footer>
-        <a href="deportivos.html">INICIO</a>
+        <a href="index.html">INICIO</a>
         <p> Contacto : 0981645592</p>
         <p> Correo de contacto: angelzurita1250@gmail.com</p>
